Изменения в ранели инструментов

--- a/app/components/sidebar/panel-functions/panel-functions.component.html
+++ b/app/components/sidebar/panel-functions/panel-functions.component.html
@@ -42,6 +42,18 @@
             <p>{{ localLanguage === "RUS" ? 'Позвонить выбранным контактам' : 'Phone checked contacts'}}</p>
         </button>
 
+        <button class="sub-panel-item group-sub-item" (click)="onGroupMatchedContacts()">
+            <p>{{ localLanguage === "RUS" ? 'Добавить контактов в группу' : 'Add checked contacts in group'}}</p>
+        </button>
+
+        <button class="sub-panel-item sort-firstname-sub-item" (click)="onSortedByFirstNameMatchedContacts()">
+            <p>{{ localLanguage === "RUS" ? 'Сортировать по имени' : 'Sorted list by firstname'}}<i class="material-icons icon">undo</i></p>
+        </button>
+
+        <button class="sub-panel-item sort-secondname-sub-item" (click)="onSortedByLastNameMatchedContacts()">
+            <p>{{ localLanguage === "RUS" ? 'Сортировать по фамилии' : 'Sorted list by lastname'}}</p>
+        </button>
+
         <button class="sub-panel-item delete-sub-item" (click)="onDeleteMatchedContacts()">
             <p>{{ localLanguage === "RUS" ? 'Удалить выбранные контактам' : 'Delete checked contacts'}}</p>
         </button>
