начато добавление средней части приложения

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -6,6 +6,9 @@
     <article class="sidebar">
         <sidebar></sidebar>
     </article>
+    <article class="middle">
+        <!--<middle></middle>-->
+    </article>
     <!--
     <article class="middle-part" [ngSwitch]="middlePartType">
         <template [ngSwitchCase]="1">
