Появилась средняя часть, но теперь левая плывет из-за стилей

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -7,7 +7,7 @@
         <sidebar></sidebar>
     </article>
     <article class="middle">
-        <!--<middle></middle>-->
+        <middle></middle>
     </article>
     <!--
     <article class="middle-part" [ngSwitch]="middlePartType">
